[FIX] minor bugfix: adjusted spacing for primary top nav

--- a/es-css/assets/css/scaffold.css
+++ b/es-css/assets/css/scaffold.css
@@ -14,7 +14,7 @@ header {
 	position: relative;
 	width: 80%;
 	margin-top: 20px;
-	padding: 20px 10%;
+	padding: 20px 10%;+
 }
 footer {	
 	margin-top: 2% !important;
@@ -111,7 +111,7 @@ nav#primary ul li {
 		text-align: right;
 		width: 60%;
 		float: right;
-		margin-right: 5%;
+		margin: 40px 5% 0 0;
 	}
 	.base {
 		width: 90%;
